add get and delete button

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,5 +1,10 @@
  <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <title>FlyMee</title>
+    </head>
+
 	<body>
 
 		<script id="templateExample" type="text/template">
@@ -10,7 +15,8 @@
 
 		<h1>It works !</h1>
 	
-		<button id="button">Call webservice</button>
+		<button id="getButton">Call webservice GET</button>
+		<button id="deleteButton">Call webservice DELETE</button>
 		
 		<div id="result"></div>
 		
