--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -3,23 +3,37 @@
     <head>
         <meta charset="utf-8" />
         <title>FlyMee</title>
+		<style>
+			.nav-border {
+				border-bottom: 2px solid #bed5ea;
+			}
+			.logo {
+				font-family: 'Bodoni MT', serif;
+				font-weight: bold;
+				color: #4A66AC;
+			}
+			.nav-button {
+				display: flex;
+				justify-content: space-between;
+			}
+		</style>
     </head>
 
 	<body>
+		<nav class="nav-border">
+			<img src="flymee_logo.png" alt="FlyMee Logo">
+			<h1 class="logo">FlyMee</h1>
+			<ul class="nav-button">
+				<li><a>Login</a></li>
+				<li><a>Register</a></li>
+				<li><a>Help</a></li>
+			</ul>
+		</nav>
+		<main>
+			<input type="text" placeholder="Departure..."/>
+			<input type="date"/>
+		</main>
 
-		<script id="templateExample" type="text/template">
-			<div>
-				<%= attribute %>
-			</div>
-		</script>
-
-		<h1>It works !</h1>
-	
-		<button id="getButton">Call webservice GET</button>
-		<button id="deleteButton">Call webservice DELETE</button>
-		
-		<div id="result"></div>
-		
 	    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="home.js"></script>
