--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -9,6 +9,7 @@
 		<script src="https://kit.fontawesome.com/56ba00e1a6.js" crossorigin="anonymous"></script>
 
 		<link rel="stylesheet" href="css-jquery-ui/jquery-ui.min.css" />
+		<link rel="stylesheet" href="nav.css" />
 		<link rel="stylesheet" href="home.css" />
 
     </head>
