--- a/src/main/webapp/help.html
+++ b/src/main/webapp/help.html
@@ -8,6 +8,8 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 		<script src="https://kit.fontawesome.com/56ba00e1a6.js" crossorigin="anonymous"></script>
 
+		<link href="fcf-assets/css/fcf.default.css" rel="stylesheet">
+    	<link href="fcf-assets/css/fcf.default-custom.css" rel="stylesheet">
 		<link rel="stylesheet" href="css-jquery-ui/jquery-ui.min.css" />
 		<link rel="stylesheet" href="nav.css" />
 		<link rel="stylesheet" href="home.css" />
@@ -44,12 +46,56 @@
 		</nav>
 						
         <main class="homepage">
-            <div class="container" id="title_and_input">
-                <h1>!!! HELP !!!</h1>
-                <p class="checkbox">
-                    Here should be the text for the help page ^^
-                </p>
-            </div>
+    		<div class="fcf-body">
+    		    <div class="fcf-form-wrap">
+    		        <div id="fcf-form">
+    		            <form class="fcf-form-class" method="post" action="fcf-assets/fcf.process.php">
+						
+    		                <div class="fcf-field">
+    		                    <label for="Name" class="fcf-label has-text-weight-normal">Your name</label>
+    		                    <div class="fcf-control">
+    		                        <input type="text" name="Name" id="Name" class="fcf-input is-full-width" maxlength="60"
+    		                            data-validate-field="Name">
+    		                    </div>
+    		                </div>
+    		                <div class="fcf-field">
+    		                    <label for="Email" class="fcf-label has-text-weight-normal">Your email address</label>
+    		                    <div class="fcf-control">
+    		                        <input type="email" name="Email" id="Email" class="fcf-input is-full-width" maxlength="100"
+    		                            data-validate-field="Email">
+    		                    </div>
+    		                </div>
+    		                <div class="fcf-field">
+    		                    <label for="Phone" class="fcf-label has-text-weight-normal">Your phone number (optional)</label>
+    		                    <div class="fcf-control">
+    		                        <input type="text" name="Phone" id="Phone" class="fcf-input is-full-width" maxlength="30"
+    		                            data-validate-field="Phone">
+    		                    </div>
+    		                </div>
+    		                <div class="fcf-field">
+    		                    <label for="Message" class="fcf-label has-text-weight-normal">Your message</label>
+    		                    <div class="fcf-control">
+    		                        <textarea name="Message" id="Message" class="fcf-textarea" maxlength="3000" rows="5"
+    		                            data-validate-field="Message"></textarea>
+    		                    </div>
+    		                </div>
+    		                <div id="fcf-status" class="fcf-status"></div>
+    		                <div class="fcf-field">
+    		                    <div class="fcf-buttons">
+    		                        <button id="fcf-button" type="submit" class="fcf-button is-link is-medium is-fullwidth">Send
+    		                            Message</button>
+    		                    </div>
+    		                </div>
+    		            </form>
+    		        </div>
+    		        <div id="fcf-thank-you" style="display:none">
+    		            <p>Thanks for contacting us, we will get back in touch with you soon.</p>
+    		        </div>
+    		    </div>
+    		</div>
+    		<script src="fcf-assets/js/lang/fcf.en.js"></script>
+    		<script src="fcf-assets/js/fcf.just-validate.min.js"></script>
+    		<script src="fcf-assets/js/fcf.form.js"></script>
         </main>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
