--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -54,7 +54,7 @@
                     <form>
                         <input type="email" id="login" class="fadeIn second" name="login" placeholder="Email">
                         <input type="password" id="password" class="fadeIn third" name="login" placeholder="Password">
-                        <button type="button" class="btn btn-primary button-submit fadeIn fourth" type="submit">Login</button>
+                        <button id="buttonLogin" type="button" class="btn btn-primary button-submit fadeIn fourth" type="submit">Login</button>
                     </form>
               
                     <div id="formFooter">
@@ -71,6 +71,6 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-		<script type="text/javascript" src="home.js"></script>
+		<script type="text/javascript" src="login.js"></script>
 	</body>
 </html>
