--- a/src/main/webapp/newAccount.html
+++ b/src/main/webapp/newAccount.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<title>FlyMee/signup</title>
+		<title>FlyMee/login</title>
 
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-		<script src="https://kit.fontawesome.com/56ba00e1a6.js" crossorigin="anonymous"></script>
+		
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-		<link rel="stylesheet" href="css-jquery-ui/jquery-ui.min.css" />
 		<link rel="stylesheet" href="nav.css" />
-		<link rel="stylesheet" href="home.css" />
+		<link rel="stylesheet" href="login.css" />
 
     </head>
 
@@ -33,9 +35,6 @@
                             <a class="nav-link" href="login.html">LOGIN</a>
 						</li>
 						<li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">SIGN UP</a>
-						</li>
-						<li class="nav-item">
 							<a class="nav-link" href="help.html">HELP</a>
 						</li>
 					</ul>
@@ -44,33 +43,20 @@
 		</nav>
 						
         <main class="homepage">
-            <div class="container" id="title_and_input">
-                <h1>SIGN UP</h1>
-				<h2>Email:</h2>
-                <div class="input_style" id="search_bar">
-                    <input class="form-control" type="email" id="email" placeholder="azerty@email.com"/>
+            <div class="wrapper fadeInDown">
+                <div id="formContent">              
+                    <form>
+                        <h1>
+                            Check our mailbox to complete our account
+                        </h1>
+                    </form>
+              
                 </div>
-                <h2>Password:</h2>
-                <div class="input_style" id="search_bar">
-                    <input class="form-control" type="password" id="password" placeholder="Password..."/>
-                </div>
-                <h2>Enter the password again:</h2>
-                <div class="input_style" id="search_bar">
-                    <input class="form-control" type="password" id="password2" placeholder="Password..."/>
-                </div>
-                <div class="input_style" id="search_bar">
-                    <p class="checkbox">
-                        Pilot : <input  type="checkbox" value="blue" id="pilotcheck"/>
-                    </p>
-                </div>
-                <button id="buttonSignup" type="button" class="btn btn-primary button-submit">SIGN UP</button>
             </div>
         </main>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-		<script type="text/javascript" src="jquery-ui.js"></script>
-	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-		<script type="text/javascript" src="signup.js"></script>
+		<script type="text/javascript" src="home.js"></script>
 	</body>
 </html>
