--- a/src/main/webapp/profil.html
+++ b/src/main/webapp/profil.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<title>FlyMee/signup</title>
+		<title>FlyMee</title>
 
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 		<script src="https://kit.fontawesome.com/56ba00e1a6.js" crossorigin="anonymous"></script>
@@ -27,16 +27,16 @@
 				<div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link" href="home.html">HOME</a>
+							<a class="nav-link" href="">HOME</a>
 						</li>
 						<li class="nav-item">
-                            <a class="nav-link" href="login.html">LOGIN</a>
+							<a class="nav-link" href="logout.html">LOGOUT</a>
+						</li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">PROFIL</a>
 						</li>
 						<li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">SIGN UP</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="help.html">HELP</a>
+							<a class="nav-link" href="helpLogin.html">HELP</a>
 						</li>
 					</ul>
 				</div>
@@ -45,25 +45,7 @@
 						
         <main class="homepage">
             <div class="container" id="title_and_input">
-                <h1>SIGN UP</h1>
-				<h2>Email:</h2>
-                <div class="input_style" id="search_bar">
-                    <input class="form-control" type="email" id="email" placeholder="azerty@email.com"/>
-                </div>
-                <h2>Password:</h2>
-                <div class="input_style" id="search_bar">
-                    <input class="form-control" type="password" id="password" placeholder="Password..."/>
-                </div>
-                <h2>Enter the password again:</h2>
-                <div class="input_style" id="search_bar">
-                    <input class="form-control" type="password" id="password2" placeholder="Password..."/>
-                </div>
-                <div class="input_style" id="search_bar">
-                    <p class="checkbox">
-                        Pilot : <input  type="checkbox" value="blue" id="pilotcheck"/>
-                    </p>
-                </div>
-                <button id="buttonSignup" type="button" class="btn btn-primary button-submit">SIGN UP</button>
+                
             </div>
         </main>
 
@@ -71,6 +53,6 @@
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 		<script type="text/javascript" src="jquery-ui.js"></script>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-		<script type="text/javascript" src="signup.js"></script>
+		<script type="text/javascript" src="home.js"></script>
 	</body>
 </html>
