add profile page

--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -57,7 +57,7 @@
 					<div class="scale">
 						<div class="about_you_info"> 
 							<i class="bi bi-at fa-2x"></i>
-							<p class="text text_about_you_info" id="email_adress">firstname.name@gmail.com</p>
+							<p class="text text_about_you_info" id="email_address">firstname.name@gmail.com</p>
 						</div>
 						<div class="about_you_info">
 							<i class="bi bi-clock fa-2x"></i>
