--- a/src/main/webapp/home-pilot.html
+++ b/src/main/webapp/home-pilot.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<title>FlyMee</title>
+		<title>FlyMee - Pilot</title>
 
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 		<script src="https://kit.fontawesome.com/56ba00e1a6.js" crossorigin="anonymous"></script>
@@ -30,11 +30,19 @@
 							<a class="nav-link active" aria-current="page">HOME</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="login.html">LOGIN</a>
+							<a class="nav-link" href="#">ADD A FLIGHT</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="signup.html">SIGN UP</a>
-						</li>
+						<div class="dropdown">
+							<a class="nav-link dropdown-toggle" href="profile.html" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+							  PROFILE
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+								<li><a class="dropdown-item" href="profile.html">My profile</a></li>
+								<li><a class="dropdown-item" href="home.html">Find a flight</a></li>
+							  	<li><a class="dropdown-item" href="#">My booked flights</a></li>
+								<li><a class="dropdown-item" href="logout.html">Logout</a></li>
+							</ul>
+						</div>
 						<li class="nav-item">
 							<a class="nav-link" href="help.html">HELP</a>
 						</li>
