--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<title>FlyMee profile</title>
+		<title>FlyMee - Profile</title>
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
@@ -29,14 +29,18 @@
 				<div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link" href="#">HOME</a>
+							<a class="nav-link" href="user_home.html">HOME</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">ADD A FLIGHT</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">PROFILE</a>
-						</li>
+						<div class="dropdown">
+							<a class="nav-link active dropdown-toggle" href="profile.html" aria-current="page" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+							  PROFILE
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+								<li><a class="dropdown-item" href="profile.html">My profile</a></li>
+							  	<li><a class="dropdown-item" href="#">My booked flights</a></li>
+								  <li><a class="dropdown-item" href="logout.html">Logout</a></li>
+							</ul>
+						</div>
 						<li class="nav-item">
 							<a class="nav-link" href="#">HELP</a>
 						</li>
