--- a/src/main/webapp/homeLogin.html
+++ b/src/main/webapp/homeLogin.html
@@ -33,7 +33,7 @@
 							<a class="nav-link" href="logout.html">LOGOUT</a>
 						</li>
                         <li class="nav-item">
-							<a class="nav-link" href="profil.html">PROFIL</a>
+							<a class="nav-link" href="profile.html">PROFILE</a>
 						<li class="nav-item">
 							<a class="nav-link" href="helpLogin.html">HELP</a>
 						</li>
