--- a/src/main/webapp/logout.html
+++ b/src/main/webapp/logout.html
@@ -32,7 +32,7 @@
 							<a class="nav-link" href="homeLogin.html">HOME</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="">PROFIL</a>
+							<a class="nav-link" href="profile.html">PROFILE</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="helpLogin.html">HELP</a>
