--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -58,6 +58,18 @@
             </div>
         </main>
 
+		<div class="container" id="output" style="display: none; background-color: white; box-shadow: 5px 5px 7px #000000;" >
+			<h1 style= "position: relative; left : 33%;">Result of the research</h1>
+			<div>
+				<div class="row">
+					<div class="col-12 col-md-4">
+						<div id="resultat" style= "position: relative; left : 50%;"></div>
+					</div>
+					<div class="col-12 col-md-8">
+				</div>
+			</div>
+		</div>
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 		<script type="text/javascript" src="jquery-ui.js"></script>
