--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -29,7 +29,7 @@
 				<div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link" href="#">HOME</a>
+							<a class="nav-link" href="homeLogin.html">HOME</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">ADD A FLIGHT</a>
