--- a/src/main/webapp/flights-found.html
+++ b/src/main/webapp/flights-found.html
@@ -95,6 +95,6 @@
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 		<script type="text/javascript" src="jquery-ui.js"></script>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-		<script type="text/javascript" src="profile.js"></script>
+		<script type="text/javascript" src="flights-found.js"></script>
 	</body>
 </html>
