--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -46,7 +46,7 @@
         <main class="homepage">
             <div class="container" id="title_and_input">
                 <h1>Find a flight proposed by a pilot:</h1>
-				<form action="flights-found.html">
+				<form action="flights-found.html" class="d-flex flex-column align-items-center">
 					<label class="input_style" id="search_bar">
 						<i class="fas fa-location-arrow icon_font1"></i>
 						<input name="departureAerodrome" class="form-control" id="tags" placeholder="Departure..." required/>
