--- a/src/main/webapp/flights-found.html
+++ b/src/main/webapp/flights-found.html
@@ -31,16 +31,12 @@
 						<li class="nav-item">
 							<a class="nav-link" href="user_home.html">HOME</a>
 						</li>
-						<div class="dropdown">
-							<a class="nav-link active dropdown-toggle" href="profile.html" aria-current="page" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-							  PROFILE
-							</a>
-							<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-								<li><a class="dropdown-item" href="profile.html">My profile</a></li>
-							  	<li><a class="dropdown-item" href="#">My booked flights</a></li>
-								  <li><a class="dropdown-item" href="logout.html">Logout</a></li>
-							</ul>
-						</div>
+						<li class="nav-item">
+							<a class="nav-link" href="login.html">LOGIN</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="signup.html">SIGN UP</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">HELP</a>
 						</li>
