--- a/src/main/webapp/flights-found.html
+++ b/src/main/webapp/flights-found.html
@@ -29,7 +29,7 @@
 				<div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link" href="user_home.html">HOME</a>
+							<a class="nav-link" href="home-user.html">HOME</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="login.html">LOGIN</a>
