--- a/src/main/webapp/my-booked-flights.html
+++ b/src/main/webapp/my-booked-flights.html
@@ -29,7 +29,7 @@
 				<div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link" href="user_home.html">HOME</a>
+							<a class="nav-link" href="home-user.html">HOME</a>
 						</li>
 						<div class="dropdown">
 							<a class="nav-link active dropdown-toggle" href="profile.html" aria-current="page" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
